--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 {% if site.posts.size == 0 %}
   <h2>No post found</h2>
 {% else %}
-<img src="{{ site.baseurl }}/assets/5.png" style="border-radius: 4px;"/>
+<img src="{{ site.baseurl }}/assets/space.jpg" style="border-radius: 4px;"/>
 <!--
 {% for post in site.posts %}
   <div class="list-item">
