--- a/photos.html
+++ b/photos.html
@@ -4,14 +4,14 @@ permalink: /photos/
 ---
 <script>
 var imageGallery = [
-  "http://i.imgur.com/9Cu1XB9.png",
+  "http://imgur.com/S8L2oHU",
  "http://i.imgur.com/VW74f2r.png" ,      
  "http://i.imgur.com/V574RyL.png",
   "http://i.imgur.com/y7Wx7PX.png",
   ];
 
 var imageText = [
-"Jackie's roar being recorded for use at the beginning of MGM talking movies. A sound stage was built around his cage to make the recording.",
+"I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita",
 "YCombinator Demo Day",
 "Man on rocketship startup", 
 "Earth",
