--- a/photos.html
+++ b/photos.html
@@ -11,9 +11,7 @@ var imageGallery = [
   ];
 
 var imageText = [
-"I am time, the destroyer of all. 
-I have come to consume the world. 
--Bhagvad Gita",
+"I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita",
 "YCombinator Demo Day",
 "Man on rocketship startup", 
 "Earth",
