--- a/photos.html
+++ b/photos.html
@@ -50,8 +50,8 @@ document.addEventListener("keydown", function(e){
 {% include nav.html %}
 <div class="content list">
 <div id="gallerycontainer">
-<img id="gallery" onclick="next()" src="http://i.imgur.com/9Cu1XB9.png" >
-<div id="imageText"> Jackie's roar being recorded for use at the beginning of MGM talking movies. A sound stage was built around his cage to make the recording. </div>
+<img id="gallery" onclick="next()" src="http://i.imgur.com/S8L2oHU.png" >
+<div id="imageText"> I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita </div>
 
 <div class="buttons">
 <a href="#" onclick="previous(); return false;">Back</a> |
