--- a/photos.html
+++ b/photos.html
@@ -5,14 +5,14 @@ permalink: /photos/
 <script>
 var imageGallery = [
   "http://i.imgur.com/S8L2oHU.png",
- "http://i.imgur.com/VW74f2r.png" ,      
- "http://i.imgur.com/V574RyL.png",
+  "http://i.imgur.com/a/msInF.png" ,      
+  "http://i.imgur.com/V574RyL.png",
   "http://i.imgur.com/y7Wx7PX.png",
   ];
 
 var imageText = [
 "I am time, the destroyer of all. I have come to consume the world.",
-"YCombinator Demo Day",
+"It is no measure of health to be well adjusted to a profoundly sick society.-Krishnamurti",
 "Man on rocketship startup", 
 "Earth",
 ]
