--- a/photos.html
+++ b/photos.html
@@ -5,7 +5,8 @@ permalink: /photos/
 <script>
 var imageGallery = [
   "http://i.imgur.com/S8L2oHU.png",
-  "http://i.imgur.com/y7Wx7PX.png" ,      
+  "http://i.imgur.com/y7Wx7PX.png",
+  "qasar.github.io/assets/yctalk.jpg",
   "http://i.imgur.com/V574RyL.png",
   "http://i.imgur.com/y7Wx7PX.png",
   ];
