--- a/photos.html
+++ b/photos.html
@@ -48,7 +48,7 @@ document.addEventListener("keydown", function(e){
 
 </script>
 {% include nav.html %}
-<div class="content list">
+<div class="content list" id="photolist">
 <div id="gallerycontainer">
 <img id="gallery" onclick="next()" src="http://i.imgur.com/S8L2oHU.png" >
 <div id="imageText"> I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita </div>
