--- a/photos.html
+++ b/photos.html
@@ -12,9 +12,9 @@ var imageGallery = [
 
 var imageText = [
 "I am time, the destroyer of all. I have come to consume the world.",
-"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
-"Man on rocketship startup", 
-"Earth",
+"I am time, the destroyer of all. I have come to consume the world.",
+"I am time, the destroyer of all. I have come to consume the world.",
+"I am time, the destroyer of all. I have come to consume the world.",
 ]
 
 var imgCount = 0;
