--- a/photos.html
+++ b/photos.html
@@ -4,17 +4,19 @@ permalink: /photos/
 ---
 <script>
 var imageGallery = [
-  "http://i.imgur.com/S8L2oHU.png",
-  "http://i.imgur.com/y7Wx7PX.png",
-  "http://i.imgur.com/V574RyL.png",
-  "http://i.imgur.com/y7Wx7PX.png",
+	"http://qasaryounis.com/assets/space.jpg",
+	"http://qasaryounis.com/assets/space.jpg",
+	"http://qasaryounis.com/assets/space.jpg",
+	"http://qasaryounis.com/assets/space.jpg",
+
   ];
 
+
 var imageText = [
-"I am time, the destroyer of all. I have come to consume the world.",
-"I am time, the destroyer of all. I have come to consume the world.",
-"I am time, the destroyer of all. I have come to consume the world.",
-"I am time, the destroyer of all. I have come to consume the world.",
+"I am time, the destroyer of all. I have come to consume the world.  1",
+"I am time, the destroyer of all. I have come to consume the world.  2",
+"I am time, the destroyer of all. I have come to consume the world.  3",
+"I am time, the destroyer of all. I have come to consume the world.  4",
 ]
 
 var imgCount = 0;
