--- a/photos.html
+++ b/photos.html
@@ -5,7 +5,7 @@ permalink: /photos/
 <script>
 var imageGallery = [
 	"http://qasaryounis.com/assets/space.jpg",
-	"http://qasaryounis.com/assets/_chicago.jpg",
+	"qasar.github.io/assets/_chicago.jpg",
 	"http://qasaryounis.com/assets/space.jpg",
 	"http://qasaryounis.com/assets/_chicago.jpg",
 
