--- a/photos.html
+++ b/photos.html
@@ -13,10 +13,10 @@ var imageGallery = [
 
 
 var imageText = [
-"I am time, the destroyer of all. I have come to consume the world.  1",
-"I am time, the destroyer of all. I have come to consume the world.  2",
-"I am time, the destroyer of all. I have come to consume the world.  3",
-"I am time, the destroyer of all. I have come to consume the world.  4",
+"I am time, the destroyer of all. I have come to consume the world.  test 1",
+"I am time, the destroyer of all. I have come to consume the world.  test 2",
+"I am time, the destroyer of all. I have come to consume the world.  test 3",
+"I am time, the destroyer of all. I have come to consume the world.  test 4",
 ]
 
 var imgCount = 0;
