--- a/photos.html
+++ b/photos.html
@@ -4,11 +4,11 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"http://qasaryounis.com/assets/space.jpg",		
-	"http://qasaryounis.com/assets/space.jpg",		
-	"http://qasaryounis.com/assets/space.jpg",		
-	"http://qasaryounis.com/assets/space.jpg",		
-		
+	"http://qasaryounis.com/assets/bul.jpg",		
+	"http://qasaryounis.com/assets/chi.jpg",		
+	"http://qasaryounis.com/assets/ecu.jpg",		
+	"http://qasaryounis.com/assets/lag.jpg",		
+	"http://qasaryounis.com/assets/mor.jpg",			
   ];		
 		
 		
@@ -17,6 +17,7 @@ var imageText = [
 "I am time, the destroyer of all. I have come to consume the world.  test 2",		
 "I am time, the destroyer of all. I have come to consume the world.  test 3",		
 "I am time, the destroyer of all. I have come to consume the world.  test 4",		
+"I am time, the destroyer of all. I have come to consume the world.  test 5",		
 ]		
 		
 var imgCount = 0;		
