--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,6 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"http://qasaryounis.com/assets/bul.jpg",		
 	"http://qasaryounis.com/assets/chi.jpg",		
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
@@ -61,7 +60,8 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
 <div id="imageText"> I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita </div>		
-<img id="gallery" onclick="next()" src="http://i.imgur.com/S8L2oHU.png" >		
+<img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
+ >		
 		
 
 		
