--- a/photos.html
+++ b/photos.html
@@ -13,7 +13,7 @@ var imageGallery = [
 		
 var imageText = [		
 "I am time, the destroyer of all. I have come to consume the world.  test 1",		
-"I am time, the destroyer of all. I have come to consume the world.  test 2",		
+"I am naturally warlike. Attacking is one of my instincts. - Nietzche. I am time, the destroyer of all. I have come to consume the world.  test 2",		
 "I am time, the destroyer of all. I have come to consume the world.  test 3",		
 "I am time, the destroyer of all. I have come to consume the world.  test 4",		
 "I am time, the destroyer of all. I have come to consume the world.  test 5",		
