--- a/photos.html
+++ b/photos.html
@@ -12,11 +12,11 @@ var imageGallery = [
 		
 		
 var imageText = [		
-"I am time, the destroyer of all. I have come to consume the world.  test 1",		
-"I am naturally warlike. Attacking is one of my instincts. - Nietzche. I am time, the destroyer of all. I have come to consume the world.  test 2",		
-"I am time, the destroyer of all. I have come to consume the world.  test 3",		
-"I am time, the destroyer of all. I have come to consume the world.  test 4",		
-"I am time, the destroyer of all. I have come to consume the world.  test 5",		
+"place holder",		
+"When I admire the wonder of a sunset or the beauty of the moon, my soul expands in worship of the Creator -Mahatma Gandhi",		
+"Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
+"I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 ]		
 		
 var imgCount = 0;		
@@ -59,7 +59,7 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText"> I am time, the destroyer of all. I have come to consume the world. -Bhagvad Gita </div>		
+<div id="imageText"> I am naturally warlike. Attacking is one of my instincts. -Nietzsche </div>		
 <img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
  >		
 		
