--- a/photos.html
+++ b/photos.html
@@ -59,7 +59,7 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText"> I am naturally warlike. Attacking is one of my instincts. -Nietzsche </div>		
+<div id="imageText"> I am naturally warlike. To attack is my instincts. -Nietzsche </div>		
 <img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
  >		
 		
