--- a/photos.html
+++ b/photos.html
@@ -12,11 +12,12 @@ var imageGallery = [
 		
 		
 var imageText = [		
-"place holder",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 "When I admire the wonder of a sunset or the beauty of the moon, my soul expands in worship of the Creator -Mahatma Gandhi",		
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",		
-"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti [END] ",		
+"place holder",		
 ]		
 		
 var imgCount = 0;		
