--- a/photos.html
+++ b/photos.html
@@ -7,16 +7,17 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/chi.jpg",		
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
-	"http://qasaryounis.com/assets/mor.jpg",			
+	"http://qasaryounis.com/assets/mor.jpg",
+	"http://qasaryounis.com/assets/bul.jpg",
   ];		
 		
 		
 var imageText = [		
-"It is no measure of health to be well adjusted to a profoundly sick society. 
-	-Krishnamurti",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 "When I admire the wonder of a sunset or the beauty of the moon, my soul expands in worship of the Creator -Mahatma Gandhi",		
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
-"I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",		
+"I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
+"I am naturally warlike. To attack is my instincts. -Nietzsche",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti [END] ",		
 "place holder",		
 ]		
@@ -61,7 +62,7 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText"> I am naturally warlike. To attack is my instincts. -Nietzsche </div>		
+<div id="imageText">I am naturally warlike. To attack is my instincts. -Nietzsche</div>		
 <img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
  >		
 		
