--- a/photos.html
+++ b/photos.html
@@ -58,7 +58,7 @@ document.addEventListener("keydown", function(e){
 {% include nav.html %}		
 <div class="content list" id="photolist">		
 <div id="gallerycontainer">		
-<div class="buttons">		
+<div class="buttons" style="padding-bottom: 15px" >		
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
