--- a/photos.html
+++ b/photos.html
@@ -15,7 +15,7 @@ var imageGallery = [
 var imageText = [		
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
-"Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
+"Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "I am naturally warlike. To attack is my instinct. -Nietzsche",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti [END] ",		
