--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,7 @@ var imageText = [
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
-"I am naturally warlike. To attack is my instinct. -Nietzsche",
+"I am by nature, warlike. To attack is my instinct. -Nietzsche",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti [END] ",		
 "place holder",		
 ]		
@@ -62,7 +62,7 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText">I am naturally warlike. To attack is my instinct. -Nietzsche</div>		
+<div id="imageText">I am by nature, warlike. To attack is my instinct. -Nietzsche</div>		
 <img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
  >		
 		
