--- a/photos.html
+++ b/photos.html
@@ -9,6 +9,11 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
 	"http://qasaryounis.com/assets/bul.jpg",
+	"http://qasaryounis.com/assets/mor1.jpg",
+	"http://qasaryounis.com/assets/nyc.jpg",
+	"http://qasaryounis.com/assets/sof.jpg",
+
+	
   ];		
 		
 		
@@ -18,8 +23,9 @@ var imageText = [
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "I am by nature, warlike. To attack is my instinct. -Nietzsche",
-"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti [END] ",		
-"place holder",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
+"place holder"
+"place holder 1",		
 ]		
 		
 var imgCount = 0;		
