--- a/photos.html
+++ b/photos.html
@@ -8,7 +8,6 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
-	"http://qasaryounis.com/assets/bul.jpg",
 	"http://qasaryounis.com/assets/mor1.jpg",
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",	
@@ -22,9 +21,11 @@ var imageText = [
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 "place holder"
-"place holder 1",		
+"place holder one",		
 ];		
 		
+
+	
 var imgCount = 0;		
 var totalImgs = imageGallery.length -1;		
 		
