--- a/photos.html
+++ b/photos.html
@@ -21,7 +21,7 @@ var imageText = [
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
-"place holder"
+"place holder",
 "place holder one",		
 ];		
 		
