--- a/photos.html
+++ b/photos.html
@@ -23,6 +23,7 @@ var imageText = [
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "place holder",
+"If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 ];		
 		
