--- a/photos.html
+++ b/photos.html
@@ -22,7 +22,7 @@ var imageText = [
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
-"place holder",
+"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
 ];		
