--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,7 @@ var imageGallery = [
 		
 		
 var imageText = [		
-"I am by nature, warlike. To attack is my instinct. -Nietzsche",
+"I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
