--- a/photos.html
+++ b/photos.html
@@ -25,7 +25,8 @@ var imageText = [
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
-"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",		
+"It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
+"If you think you're free, there's no escape possible. -Ram Dass",
 ];		
 		
 
