--- a/photos.html
+++ b/photos.html
@@ -71,7 +71,7 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText">I am by nature, warlike. To attack is my instinct. -Nietzsche</div>		
+<div id="imageText">I am by nature, war-like. To attack is my instinct. -Nietzsche</div>		
 <img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/bul.jpg",		
  >		
 		
