--- a/photos.html
+++ b/photos.html
@@ -4,13 +4,13 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
+	"http://qasaryounis.com/assets/mor1.jpg",
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/cop.jpg",
 	"http://qasaryounis.com/assets/chi.jpg",		
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
-	"http://qasaryounis.com/assets/mor1.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",	
 	"http://qasaryounis.com/assets/mor3.png",	
 
@@ -18,13 +18,13 @@ var imageGallery = [
 		
 		
 var imageText = [		
+"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
-"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
 ];		
@@ -71,9 +71,10 @@ document.addEventListener("keydown", function(e){
 <a href="#" onclick="previous(); return false;">Back</a> |		
 <a href="#" onclick="next(); return false;">Next</a> 		
 </div>		
-<div id="imageText">"If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln"
+<div id="imageText">""We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot"
 </div>		
-<img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/nyc.jpg",		
+<img id="gallery" onclick="next()" src=	"http://qasaryounis.com/assets/mor1.jpg",
+",		
  >		
 		
 
