--- a/photos.html
+++ b/photos.html
@@ -29,7 +29,7 @@ var imageText = [
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
-"My name is Ozymandias, King of Kings; Look on my works, ye Mighty, and despair! -Percy Shelley",
+"My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 ];		
 		
 
