--- a/photos.html
+++ b/photos.html
@@ -13,7 +13,9 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/mor.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",	
 	"http://qasaryounis.com/assets/mor3.png",	
-	"http://qasaryounis.com/assets/viet.jpg",	
+	"http://qasaryounis.com/assets/viet.jpg",
+	"http://qasaryounis.com/assets/qui_.jpg",
+	
 
 
 ];		
@@ -30,6 +32,7 @@ var imageText = [
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
+"Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 ];		
 		
 
