--- a/photos.html
+++ b/photos.html
@@ -8,10 +8,12 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/cop.jpg",
 	"http://qasaryounis.com/assets/chi.jpg",		
+	"http://qasaryounis.com/assets/tan.jpg",	
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",	
+	"http://qasaryounis.com/assets/power.jpg",	
 	"http://qasaryounis.com/assets/mor3.png",	
 	"http://qasaryounis.com/assets/viet.jpg",
 	"http://qasaryounis.com/assets/qui_.jpg",
@@ -26,11 +28,13 @@ var imageText = [
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
+"Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips"
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
+"Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater"
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 ];		
