--- a/photos.html
+++ b/photos.html
@@ -17,7 +17,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/power.jpg",	
 	"http://qasaryounis.com/assets/viet.jpg",
 	"http://qasaryounis.com/assets/qui_.jpg",
-	
+	"http://qasaryounis.com/assets/tha.jpg",
 
 
 ];		
@@ -37,6 +37,8 @@ var imageText = [
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
+"I am not who you think I am; I am not who I think I am; I am who I think you think I am. -Thomas Cooley"
+	
 ];		
 		
 
