--- a/photos.html
+++ b/photos.html
@@ -40,7 +40,7 @@ var imageText = [
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
-"I am not who you think I am; I am not who I think I am; I am who I think you think I am. -Thomas Cooley"
+"If you want others to be happy, practice compassion. If you want to be happy, practice compassion.- HH the Dalai Lama"
 	
 ];		
 		
