--- a/photos.html
+++ b/photos.html
@@ -41,7 +41,7 @@ var imageText = [
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
-"Dare mighty things. -Theordore Roosevelt",
+"Dare mighty things. -Theodore Roosevelt",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -Dalai Lama"
 	
 ];		
