--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,7 @@ permalink: /photos/
 ---		
 <script>		
 var imageGallery = [		
-	"http://qasaryounis.com/assets/mor1.jpg",
+	"http://qasaryounis.com/assets/ess.jpg",
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/cop.jpg",
 	"http://qasaryounis.com/assets/chi.jpg",		
@@ -18,7 +18,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/viet.jpg",
 	"http://qasaryounis.com/assets/qui_.jpg",
 	"http://qasaryounis.com/assets/fall.jpg",
-	"http://qasaryounis.com/assets/ess.jpg",
+	"http://qasaryounis.com/assets/mor1.jpg",
 	"http://qasaryounis.com/assets/tha.jpg",
 
 	
@@ -111,7 +111,7 @@ function handlePhotoClick(event, img) {
 </div>		
 <div id="imageText">"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot"
 </div>		
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/mor1.jpg",
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/ess.jpg",
 ",		
  >		
 		
