--- a/photos.html
+++ b/photos.html
@@ -27,7 +27,7 @@ var imageGallery = [
 		
 		
 var imageText = [		
-"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
+"Dare mighty things. -Theodore Roosevelt",
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
@@ -41,10 +41,10 @@ var imageText = [
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
-"Dare mighty things. -Theodore Roosevelt",
-"If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -Dalai Lama"
+"We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
+"If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama"
 	
-];		
+];
 		
 
 	
