--- a/photos.html
+++ b/photos.html
@@ -9,6 +9,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/cop.jpg",
 	"http://qasaryounis.com/assets/chi.jpg",		
 	"http://qasaryounis.com/assets/tan.jpg",	
+	"http://qasaryounis.com/assets/arg.jpg",	
 	"http://qasaryounis.com/assets/ecu.jpg",		
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
@@ -32,6 +33,7 @@ var imageText = [
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
 "Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips",
+"Don't hit at all if it is honorably possible to avoid hitting; but never hit soft.  -Theodore Roosevelt",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
