--- a/photos.html
+++ b/photos.html
@@ -111,7 +111,7 @@ function handlePhotoClick(event, img) {
 <a href="#" onclick="next(); return false;">Next</a>
 	<span style="float:right; color: #aaa;"> <span id="currentImage">0</span> of <span id="totalImages">5</span></span>
 </div>		
-<div id="imageText">"Dare mighty things. -Theodore Roosevelt",
+<div id="imageText">Dare mighty things. -Theodore Roosevelt
 
 </div>		
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/ess.jpg",
