--- a/photos.html
+++ b/photos.html
@@ -42,7 +42,7 @@ var imageText = [
 "If you think you're free, there's no escape possible. -Ram Dass",
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
 "My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
-"My imperfections and failures are as much a blessing from God as my successes and my talents. And I lay them both at his feet. -Mahatma Gandhi"
+"My imperfections and failures are as much a blessing from God as my successes and my talents. And I lay them both at his feet. -Mahatma Gandhi",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
