--- a/photos.html
+++ b/photos.html
@@ -36,7 +36,7 @@ var imageText = [
 "Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips",
 "Don't hit at all if it is honorably possible. But never hit soft. -Theodore Roosevelt",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
-"Every revolution evaporates and leaves behind only the slime of a new bureaucracy. - Franz Kafka"
+"Every revolution evaporates and leaves behind only the slime of a new bureaucracy. - Franz Kafka",
 "Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
