--- a/photos.html
+++ b/photos.html
@@ -48,8 +48,8 @@ var imageText = [
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
-"Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault"
-"The true measure of a man is how he treats someone who can do him absolutely no good.-Samuel Johnson"
+"Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
+"The true measure of a man is how he treats someone who can do him absolutely no good.-Samuel Johnson",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama"
 	
 ];
