--- a/photos.html
+++ b/photos.html
@@ -39,17 +39,17 @@ var imageText = [
 "Don't hit at all if it is honorably possible. But never hit soft. -Theodore Roosevelt",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
 "Every revolution evaporates and leaves behind only the slime of a new bureaucracy. - Franz Kafka",
-"Under communism, man exploits man. Under capitalism, it's just the opposite. -John Kenneth Galbraith",		
+"Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
-"My name is ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
+"My name is Ozymandias, king of kings; look on my works, ye Mighty, and despair! -Percy Shelley",
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
-"The true measure of a man is how he treats someone who can do him absolutely no good.-Samuel Johnson",
+"The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama"
 	
 ];
