--- a/photos.html
+++ b/photos.html
@@ -12,6 +12,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/arg.jpg",	
 	"http://qasaryounis.com/assets/ecu.jpg",
 	"http://qasaryounis.com/assets/jam.jpg",
+	"http://qasaryounis.com/assets/slo.jpg",
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",	
@@ -38,6 +39,7 @@ var imageText = [
 "Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips",
 "Don't hit at all if it is honorably possible. But never hit soft. -Theodore Roosevelt",
 "When I admire the wonder of a sunset, my soul expands in worship of the Creator. -Mahatma Gandhi",		
+"To a mind that is still, the whole universe surrenders. -Chuang-Tzu",
 "Every revolution evaporates and leaves behind only the slime of a new bureaucracy. - Franz Kafka",
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
