--- a/photos.html
+++ b/photos.html
@@ -25,6 +25,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/mor1.jpg",
 	"http://qasaryounis.com/assets/cop.jpg",
 	"http://qasaryounis.com/assets/tha.jpg",
+	"http://qasaryounis.com/assets/church.png",
 
 	
 
@@ -52,7 +53,8 @@ var imageText = [
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
-"If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama"
+"If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
+"At about three o'clock, Jesus called out with a loud voice, 'My God, my God, why have you abandoned me?!' -Matthew 27:46"
 	
 ];
 		
