--- a/photos.html
+++ b/photos.html
@@ -54,7 +54,7 @@ var imageText = [
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
-"At about three o'clock, Jesus cried out in a loud voice, 'My God, my God, why have you abandoned me?!' -Matthew 27:46"
+"At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46"
 	
 ];
 		
