--- a/photos.html
+++ b/photos.html
@@ -124,7 +124,7 @@ function handlePhotoClick(event, img) {
 <div id="imageText">Dare mighty things. -Theodore Roosevelt
 
 </div>		
-<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/ess.jpg",
+<img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",
 ",		
  >		
 		
