--- a/photos.html
+++ b/photos.html
@@ -20,6 +20,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/viet.jpg",
 	"http://qasaryounis.com/assets/qui_.jpg",
 	"http://qasaryounis.com/assets/fall.jpg",
+	"http://qasaryounis.com/assets/air.jpg",
 	"http://qasaryounis.com/assets/tur.jpg",
 	"http://qasaryounis.com/assets/slo.jpg",
 	"http://qasaryounis.com/assets/mor1.jpg",
@@ -32,7 +33,7 @@ var imageGallery = [
 		
 var imageText = [		
 "Dare mighty things. -Theodore Roosevelt",
-"If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",
+"If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",	
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
 "Art washes away from the soul the dust of everyday life. -Pablo Picasso",
 "Governments exist to protect the rights of minorities. The loved and the rich need no protection: they have many friends and few enemies. - Wendell Phillips",
@@ -48,6 +49,7 @@ var imageText = [
 "Every gun that is made, every warship launched, every rocket fired signifies, in the final sense, a theft from those who hunger and are not fed, those who are cold and are not clothed. -General Eisenhower",
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
+"Nearly all men can stand adversity, but if you want to test a man's character, give him power. -Abraham Lincoln",
 "Every revolution evaporates and leaves behind only the slime of a new bureaucracy. - Franz Kafka",
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
