--- a/photos.html
+++ b/photos.html
@@ -14,6 +14,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/ess.jpg",
 	"http://qasaryounis.com/assets/lag.jpg",		
 	"http://qasaryounis.com/assets/mor.jpg",
+	"http://qasaryounis.com/assets/paris.jpg
 	"http://qasaryounis.com/assets/sof.jpg",
 	"http://qasaryounis.com/assets/mor3.png",	
 	"http://qasaryounis.com/assets/power.jpg",	
@@ -42,6 +43,7 @@ var imageText = [
 "To a mind that is still, the whole universe surrenders. -Chuang-Tzu",
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "I am Time, the destroyer of all. I have come to consume the world. -Bhagavad Gita",
+"The best way to find yourself is to lose yourself in the service of others. -Mohandas Gandhi",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
 "If you think you're free, there's no escape possible. -Ram Dass",
 "Those who seek absolute power, even though they seek it to do what they regard as good, are simply demanding the right to enforce their own version of heaven on earth. And let me remind you, they are the very ones who always create the most hellish tyrannies. Absolute power does corrupt, and those who seek it must be suspect and must be opposed. - Barry Goldwater",
