--- a/photos.html
+++ b/photos.html
@@ -33,30 +33,30 @@ var imageGallery = [
 		
 		
 var imageText = [		
-"",
-"",
-"",	
-"",
-"",
-"",
-"",
-"",		
-"",
-"",		
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-"",
-""
+"Kingston",
+"Detroit",
+"Times Square",	
+"Ngorongoro Crater",
+"Grant Park",
+"Fez",
+"Buenos Aires",
+"Cotopaxi",		
+"High Atlas Mountains",
+"Chiang Mai",		
+"Field Museum",
+"Paris",
+"Train to Casablana",
+"New York City",
+"Hanoi",
+"Quito",
+"Iguazu",
+"Sofia",
+"Ephesus",
+"Ljubljana",
+"Sahara",
+"Brooklyn",
+"Bangkok",
+"Sydney"
 	
 ];
 		
