--- a/photos.html
+++ b/photos.html
@@ -20,6 +20,7 @@ var imageGallery = [
 	"http://qasaryounis.com/assets/power.jpg",	
 	"http://qasaryounis.com/assets/viet.jpg",
 	"http://qasaryounis.com/assets/qui_.jpg",
+	"http://qasaryounis.com/assets/tokyo.jpg",
 	"http://qasaryounis.com/assets/fall.jpg",
 	"http://qasaryounis.com/assets/sof.jpg",
 	"http://qasaryounis.com/assets/tur.jpg",
@@ -49,6 +50,7 @@ var imageText = [
 "New York City",
 "Hanoi",
 "Quito",
+"Shinjuku",	
 "Iguazu",
 "Sofia",
 "Ephesus",
