--- a/photos.html
+++ b/photos.html
@@ -53,7 +53,7 @@ var imageText = [
 "Under capitalism, man exploits man. Under communism, it's just the opposite. -John Kenneth Galbraith",		
 "Willingly would I burn to death like Phaeton, were this the price for reaching the sun and learning its shape, its size and its substance. -Eudoxus of Cnidus",
 "It is no measure of health to be well adjusted to a profoundly sick society. -Krishnamurti",
-"Nearly all men can stand adversity, but if you want to test a man's character, give him power. -Abraham Lincoln",
+"Power concedes nothing without a demand; it never has and it never will. -Frederick Douglass",
 "Wisdom comes through suffering - Aeschylus",
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
