--- a/photos.html
+++ b/photos.html
@@ -126,7 +126,7 @@ function handlePhotoClick(event, img) {
 	<span style="float:right; color: #aaa;"> <span id="currentImage">0</span> of <span id="totalImages">5</span></span>
 </div>		
 <div id="imageText">
-"Dare mighty things. -Theodore Roosevelt",
+Dare mighty things. -Theodore Roosevelt,
 </div>		
 <img id="gallery" onclick="handlePhotoClick(event, this)"  src=	"http://qasaryounis.com/assets/jam.jpg",
 ",		
