--- a/photos.html
+++ b/photos.html
@@ -59,7 +59,7 @@ var imageText = [
 "Enjoy the little things, for one day you may look back and realize they were the big things. -Robert Brault",
 "The true measure of a man is how he treats someone who can do him absolutely no good. -Samuel Johnson",
 "If you want others to be happy, practice compassion. If you want to be happy, practice compassion. -His Holiness the 14th Dalai Lama",
-"Heard joke once: Man goes to doctor. Says he's depressed. Says life seems harsh and cruel. Says he feels all alone in threatening world where what lies ahead is vague and uncertain. Doctor says, 'Treatment is simple. Great clown Pagliacci is in town tonight. Go and see him. That should pick you up.' Man bursts into tears. Says 'But Doctor... I am Pagliacci.' Good joke. Everybody laugh. Roll on snare drum. Curtains. - Rorschach",
+"Heard joke once: Man goes to doctor. Says he's depressed. Says life seems harsh and cruel. Says he feels all alone in threatening world where what lies ahead is vague and uncertain. Doctor says, 'Treatment is simple. Great clown Pagliacci is in town tonight. Go and see him. That should pick you up.' Man bursts into tears. Says 'But Doctor... I am Pagliacci.' -Rorschach",
 "At about three o'clock, Jesus cried out in a loud voice, 'My God! My God! Why have you abandoned me!' -Matthew 27:46"
 	
 ];
