--- a/photos.html
+++ b/photos.html
@@ -5,6 +5,7 @@ permalink: /photos/
 <script>		
 var imageGallery = [		
 	"http://qasaryounis.com/assets/jam.jpg",
+	"http://qasaryounis.com/assets/bike.jpg",
 	"http://qasaryounis.com/assets/air.jpg",
 	"http://qasaryounis.com/assets/nyc.jpg",
 	"http://qasaryounis.com/assets/ken2.jpg",
@@ -36,6 +37,7 @@ var imageGallery = [
 		
 var imageText = [		
 "Dare mighty things. -Theodore Roosevelt",
+"Photography is not like painting. There is a creative fraction of a second when you are taking a picture. Your eye must see a composition or an expression that life itself offers you, and you must know with intuition when to click the camera. -Henri Cartier-Bresson",
 "We shall not cease from exploration, and the end of all our exploring, will be to arrive where we started, and know the place for the first time. -T. S. Eliot",
 "If you look for the bad in people expecting to find it, you surely will. -Abraham Lincoln",	
 "I am by nature war-like. To attack is my instinct. -Nietzsche",
